src/objects/Payments__c.object
<CustomObject>
    <fields>
        <fullName>Bond_Payment__c</fullName>
        <formula>Payment__c +  Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the bond payment for the period.</inlineHelpText>
        <label>Bond Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County_Fee__c</fullName>
        <inlineHelpText>Any Fee that the county charges</inlineHelpText>
        <label>County Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>The date the payment is due</inlineHelpText>
        <label>Bond Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <inlineHelpText>Interest Payment</inlineHelpText>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parcel__c</fullName>
        <label>Parcel</label>
        <referenceTo>Parcel__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Recieved_Amount__c</fullName>
        <inlineHelpText>The payment we receieved.</inlineHelpText>
        <label>Payment Recieved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Recieved_Date__c</fullName>
        <inlineHelpText>The date the payment was recieved.</inlineHelpText>
        <label>Payment Recieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <inlineHelpText>What kind of payment is it?</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capitalized Interest</fullName>
                </value>
                <value>
                    <fullName>P &amp; I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <inlineHelpText>Amount applies to principal</inlineHelpText>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Admin_Fee__c</fullName>
        <inlineHelpText>Any Fee paid to the tax administrator</inlineHelpText>
        <label>Tax Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Payment__c</fullName>
        <formula>Interest__c +  Payment__c +  Tax_Admin_Fee__c +  Trustee_Fee__c +  County_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the P&amp;I payment plus any fees</inlineHelpText>
        <label>Tax Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Year__c</fullName>
        <inlineHelpText>The tax year that the bond payment is associated with.</inlineHelpText>
        <label>Tax Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Fee__c</fullName>
        <inlineHelpText>Any Fee the Trustee Charges</inlineHelpText>
        <label>Trustee Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parcel__c</columns>
        <columns>Bond_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payments  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>